Refactor ExamClient and ReportService to improve anomaly fetching and reporting logic