@@ -1,6 +1,6 @@
+// src/main/java/sprint4/report_service/service/ReportService.java
 package sprint4.report_service.service;
 
-import java.time.Duration;
 import java.time.Instant;
 import java.util.List;
 import java.util.Map;
@@ -22,28 +22,27 @@ public class ReportService {
         this.examClient = examClient;
     }
 
-    public Mono<Report> generateReport(Duration period) {
-    Instant now  = Instant.now();
-    Instant from = now.minus(period);
+    public Mono<Report> generateReport(Instant from) {
+        Instant now = Instant.now();
+        return examClient.fetchExamsSince(from)
+            .filter(ExamRecord::isAnomaly)
+            .collectList()
+            .map(list -> {
+                Map<String, List<ExamRecord>> grouped =
+                    list.stream().collect(Collectors.groupingBy(ExamRecord::getExamType));
 
-    return examClient.fetchExams(period)      // Llama al cliente
-        .filter(ExamRecord::isAnomaly)          // Solo anomalías
-        .collectList()
-        .map(list -> {
-        // Agrupa por tipo y extrae IDs únicos
-        Map<String, List<ExamRecord>> grouped = list.stream()
-            .collect(Collectors.groupingBy(ExamRecord::getExamType));
-        List<ReportEntry> entries = grouped.entrySet().stream()
-            .map(e -> new ReportEntry(
-                e.getKey(),
-                e.getValue().size(),
-                e.getValue().stream()
-                .map(ExamRecord::getPatientId)
-                .distinct()
-                .toList()))
-            .toList();
-        return new Report(from + "_to_" + now, "examType", entries);
-        });
+                List<ReportEntry> entries = grouped.entrySet().stream()
+                    .map(e -> new ReportEntry(
+                        e.getKey(),
+                        e.getValue().size(),
+                        e.getValue().stream()
+                            .map(ExamRecord::getPatientId)
+                            .distinct()
+                            .collect(Collectors.toList())))
+                    .collect(Collectors.toList());
+
+                String periodStr = from + "_to_" + now;
+                return new Report(periodStr, "examType", entries);
+            });
     }
-
 }
